# ratio_corr_gammas

./: .coveragerc  .gitignore  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
src/ratio_corr_gammas/: dist.py  rejection_sampler.py  sample.py  skeleton.py
tests/: conftest.py  test_rcg.py  test_skeleton.py
